Updates Index.html: Django info and Resource links
I added a section about Why Django, Uses for Django, When Not to Use Django, and added several resource links.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
 <body>
   <main class="wrapper">
   <header>
-    <h1> This is our basic webpage for our Python Django stack </h1>
+    <h1> ITC134: Our basic webpage for our Python Django stack </h1>
   </header>
   <section>
-    <h2>ITC134: The Python-Django-Apache-MySQL Stack - Google Cloud Platform</h2>
-    <p> Some delightful text about our Stack? Perhaps some not-delightful text?</p>
+    <h2>Python-Django-Apache-MySQL Stack - Google Cloud Platform</h2>
+    <h3>What is Django, and why use it?</h3>
+    <p>Django is one of the most popular open source frameworks for Python-based back end applications. It is touted as being superior for quick and easy development and deployment, with many built-in features such as virtual environments, admin console, mini server, and it’s own database option.  It’s strengths include future proofing for scalability, security, and simplifying work for developers, with it’s “Don’t Repeat Yourself” methodology, allowing developers to re-use sections of code rapidly through the use of Views and Templates.</p>
+    <p>Many companies are known for using Django, including such sites as: Spotify, Instagram, The Washington Post, NASA, and Pinterest, among many other recognizable names.</p>
+    <p>Because Django is open-source, it has plenty of documentation (at times it feels like there’s too much), and comes with a lot of features included that other frameworks would need to be added on. It’s based on Python, a language that is touted as being one of the easiest to learn. Once you are familiar with it, many claim Django to be very simple and quick to use.</p>
+    
+    <h3>When not to use Django</h3>
+    <p>Our experience as new users to Python and Django was a bit different, and installing it as a stack on GCP was challenging at many points along the path, with multiple research dead-ends.  There is a complexity with all Django has to offer, which, once set-up, can provide a lot of reusability, which would be useful for larger-scope projects that need to make use of cutting edge technology and scalability. However, that complexity makes the initial adoption potentially very challenging. </p>
+    <p>We feel it’s important to point out a couple reasons not to use Django, summed up nicely by Kalpit’s article, “When to Use Django (And When Not To)”, at <em>Medium</em>. A couple of their points about when not to use Django (summarized below), resonated with our experience:</p>
+      <ul>
+        <li>If you are just building a basic app, which doesn’t require anything remotely complex (like a “Hello World” application).
+</li>
+         <li>If your team isn’t familiar with Django or Python at all, and you don’t have the time to gather the required skills.</li>
+    </ul>
     
     <h3>Python/Django Stack Tutorial</h3>
       <p> We researched the best way to install a Python/Django stack to the Google Cloud Platform Compute Instance.
@@ -38,10 +50,19 @@
    <aside>
         <h3>Resources:</h3>
           <ul>
-            <li><a href=" " target="_blank" title ="">Useful Link</a></li>
-            <li><a href=" " target="_blank" title ="">Useful Link</a></li>
-            <li><a href=" " target="_blank" title ="">Useful Link</a></li>
-            <li><a href=" " target="_blank" title ="">Useful Link</a></li>
+            <li><a href="https://medium.com/crowdbotics/when-to-use-django-and-when-not-to-9f62f55f693b" target="_blank" title ="When To Use Django (And When Not To)">When To Use Django (And When Not To)</a></li>
+            <li><a href="https://djangostars.com/blog/why-we-use-django-framework/" target="_blank" title ="Why We Use Django Framework & What Is Django Best Used For">Why We Use Django Framework & What Is Django Best Used For</a></li>
+            <li><a href="https://www.youtube.com/playlist?list=PL-osiE80TeTtoQCKZ03TU5fNfx2UY6U4p" target="_blank" title ="Youtube Django Tutorial">Youtube: “Python Django Tutorial: Full-Featured Web App</a></li>
+            <li><a href="https://tutorial.djangogirls.org/en/" target="_blank" title ="Django Girls Tutorial">Django Girls Tutorial</a></li>
+            <li><a href="https://cloud.google.com/python/setup" target="_blank" title="GCP Python setup">GCP Python setup</a></li>
+            <li><a href="https://cloud.google.com/compute/docs/instances/" target="_blank" title="GCP Compute Instances">GCP Compute Instances</a></li>
+            <li><a href="https://docs.djangoproject.com/en/2.2/intro" target="_blank" title="Djangoproject.com: getting started">Djangoproject.com: Getting Started</a></li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django" target="_blank" title="Mozilla: Django Web Framework">Mozilla: Django Web Framework</a></li>
+            <li><a href="https://djangocentral.com/how-to-install-django/" target="_blank" title="Djangocentral.com: How to Install Django">Djangocentral.com: How to Install Django</a></li>
+            <li><a href="" target="_blank" title="">text</a></li>
+            <li><a href="" target="_blank" title="">text</a></li>
+            <li><a href="" target="_blank" title="">text</a></li>
+            <li><a href="" target="_blank" title="">text</a></li>
           </ul>
    </aside> 
 </body>
