Adds completed work images and links
added html for the two images showing completion of work, and added another resource link.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
     <p><a href="https://docs.google.com/document/d/14EJkavbU2sVPAqoQsE4r8fY71d9u_4NsISrBrz5Gj6I/edit?usp=sharing" target="_blank" title="Hello World python/Django app: GCP Tutorial">Web App Creation Tutorial</a></p>
     <p><em> I created a google doc from copying Megan's markdown document from Github--do we need her google doc link?</em></p>
     
-    <h3>"Showing our work"?</h3> 
-    <p>The Assignment says: "A Github page <em>designed to show your work</em>, present your repo (<strong>check!</strong>) and provide links to your tutorials (<strong>check!</strong>)"<p>
-      <p> "designed to show your work"--do we need to perhaps have a link to the completed app? A screenshot like Megan posted to the slack thread? </p>
+    <p>By the time we completed the Web App, we were able to have Python Code, displaying HTML in a web browser window!<p>
+
+    <img src="images/pyDjango_code.jpg" alt="Django and Python code screenshot" >
+    <img src="images/helloworld.jpg" alt="Hello World in a browser" >
+    
    
     <h3>Github Repository</h3>
     <p> feel free to check out our work in more detail at our <a href="https://github.com/susandriskill/itc-134-group-01-application-stack-project" target="_blank" title="Github project repo">Github Repo</a>.</p>
@@ -59,7 +61,7 @@
             <li><a href="https://docs.djangoproject.com/en/2.2/intro" target="_blank" title="Djangoproject.com: getting started">Djangoproject.com: Getting Started</a></li>
             <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django" target="_blank" title="Mozilla: Django Web Framework">Mozilla: Django Web Framework</a></li>
             <li><a href="https://djangocentral.com/how-to-install-django/" target="_blank" title="Djangocentral.com: How to Install Django">Djangocentral.com: How to Install Django</a></li>
-            <li><a href="" target="_blank" title="">text</a></li>
+            <li><a href="https://www.w3schools.com/python/python_mysql_getstarted.asp" target="_blank" title="W3schools Python MySQL">W3schools: Python and MysQL</a></li>
             <li><a href="" target="_blank" title="">text</a></li>
             <li><a href="" target="_blank" title="">text</a></li>
             <li><a href="" target="_blank" title="">text</a></li>
